--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,17 @@ jobs:
 
     - name: Build and push Docker images
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -f data_ingestion/Dockerfile data_ingestion/
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/data_processing:latest -f data_processing/Dockerfile data_processing/
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
+        # docker build -t ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -f data_ingestion/Dockerfile data_ingestion/
+        # docker build -t ${{ secrets.DOCKER_USERNAME }}/data_processing:latest -f data_processing/Dockerfile data_processing/
+        # docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
+        # docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
+        # docker build -t ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
         docker build -t ${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest -f user_interface/monitoring_project/Dockerfile user_interface/monitoring_project/
-        docker push ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/data_processing:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest
+        # docker push ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest
+        # docker push ${{ secrets.DOCKER_USERNAME }}/data_processing:latest
+        # docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest
+        # docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest
+        # docker push ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest
 
     - name: Set up Google Cloud SDK
@@ -56,19 +56,19 @@ jobs:
       run: |
         gcloud container clusters get-credentials cscluster --zone us-central1-a --project cloudsentinel-427513
 
-    # - name: Install Helm
-    #   run: |
-    #     curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+    - name: Install Helm
+      run: |
+        curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
-    # - name: Add Prometheus Helm repository
-    #   run: |
-    #     helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-    #     helm repo update
+    - name: Add Prometheus Helm repository
+      run: |
+        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+        helm repo update
 
-    # - name: Deploy Prometheus
-    #   run: |
-    #     kubectl create namespace monitoring || true
-    #     helm install prometheus prometheus-community/prometheus -n monitoring
+    - name: Deploy Prometheus
+      run: |
+        kubectl create namespace monitoring || true
+        helm install prometheus prometheus-community/prometheus -n monitoring
 
     - name: Deploy to Kubernetes
       run: |
@@ -84,13 +84,23 @@ jobs:
         kubectl apply -f k8s/crca_anomaly_detection-celery-deployment.yml
         kubectl apply -f k8s/monitoring_project-deployment.yml
 
-        kubectl patch deployment celery-worker-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        kubectl patch deployment data-ingestion-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        kubectl patch deployment data-processing-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        kubectl patch deployment crca-anomaly-detection-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        kubectl patch deployment crca-anomaly-detection-celery-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        kubectl patch deployment cgnn-anomaly-detection-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        kubectl patch deployment learning-adaptation-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        kubectl patch deployment learning-adaptation-celery-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        kubectl patch deployment monitoring-project-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        kubectl set image deployment/celery-worker-deployment  data-ingestion-container=${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -n cloudsentinel
+        kubectl set image deployment/data-ingestion-deployment data-ingestion-container=${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -n cloudsentinel
+        kubectl set image deployment/data-processing-deployment data-processing-container=${{ secrets.DOCKER_USERNAME }}/data_processing:latest -n cloudsentinel
+        kubectl set image deployment/cgnn-anomaly-detection-deployment cgnn-anomaly-detection-container=${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest -n cloudsentinel
+        kubectl set image deployment/crca-anomaly-detection-deployment crca-anomaly-detection-container=${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -n cloudsentinel
+        kubectl set image deployment/crca-anomaly-detection-celery-deployment crca-anomaly-detection-container=${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -n cloudsentinel
+        kubectl set image deployment/learning-adaptation-celery-deployment learning-adaptation-container=${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -n cloudsentinel
+        kubectl set image deployment/learning-adaptation-deployment learning-adaptation-container=${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -n cloudsentinel
+        kubectl set image deployment/monitoring-project-deployment monitoring-project-container=${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest -n cloudsentinel
+
+        # kubectl patch deployment celery-worker-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        # kubectl patch deployment data-ingestion-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        # kubectl patch deployment data-processing-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        # kubectl patch deployment crca-anomaly-detection-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        # kubectl patch deployment crca-anomaly-detection-celery-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        # kubectl patch deployment cgnn-anomaly-detection-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        # kubectl patch deployment learning-adaptation-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        # kubectl patch deployment learning-adaptation-celery-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
+        # kubectl patch deployment monitoring-project-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
 
