--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,31 +44,52 @@ jobs:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         export_default_credentials: true
 
-    - name: Install gke-gcloud-auth-plugin
+    - name: Check if gke-gcloud-auth-plugin is installed
       run: |
-        echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-        sudo apt-get install -y apt-transport-https ca-certificates gnupg
-        curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-        sudo apt-get update -y
-        sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+        if ! dpkg -l | grep -q 'google-cloud-sdk-gke-gcloud-auth-plugin'; then
+          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          sudo apt-get install -y apt-transport-https ca-certificates gnupg
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+          sudo apt-get update -y
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+        else
+          echo "gke-gcloud-auth-plugin is already installed"
+        fi
 
     - name: Configure kubectl
       run: |
         gcloud container clusters get-credentials cscluster --zone us-central1-a --project cloudsentinel-427513
 
-    # - name: Install Helm
-    #   run: |
-    #     curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+    - name: Check if Helm is installed
+      run: |
+        if ! command -v helm &> /dev/null; then
+          curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+        else
+          echo "Helm is already installed"
+        fi
 
-    # - name: Add Prometheus Helm repository
-    #   run: |
-    #     helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-    #     helm repo update
+    - name: Add Prometheus Helm repository if not already added
+      run: |
+        if ! helm repo list | grep -q 'prometheus-community'; then
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm repo update
+        else
+          echo "Prometheus Helm repository is already added"
+        fi
 
-    # - name: Deploy Prometheus
-    #   run: |
-    #     kubectl create namespace monitoring || true
-    #     helm install prometheus prometheus-community/prometheus -n monitoring
+    - name: Deploy Prometheus if not already deployed
+      run: |
+        if ! kubectl get namespaces | grep -q 'monitoring'; then
+          kubectl create namespace monitoring || true
+        else
+          echo "Namespace 'monitoring' already exists"
+        fi
+
+        if ! helm list -n monitoring | grep -q 'prometheus'; then
+          helm install prometheus prometheus-community/prometheus -n monitoring
+        else
+          echo "Prometheus is already deployed in the 'monitoring' namespace"
+        fi
 
     - name: Deploy to Kubernetes
       run: |
