--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,15 +26,15 @@ jobs:
       run: |
         # docker build -t ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -f data_ingestion/Dockerfile data_ingestion/
         # docker build -t ${{ secrets.DOCKER_USERNAME }}/data_processing:latest -f data_processing/Dockerfile data_processing/
-        # docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
         # docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
-        # docker build -t ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
         docker build -t ${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest -f user_interface/monitoring_project/Dockerfile user_interface/monitoring_project/
         # docker push ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest
         # docker push ${{ secrets.DOCKER_USERNAME }}/data_processing:latest
-        # docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest
         # docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest
-        # docker push ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest
 
     - name: Set up Google Cloud SDK
@@ -116,14 +116,3 @@ jobs:
         kubectl set image deployment/monitoring-project-deployment monitoring-project=${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest -n cloudsentinel
 
         kubectl rollout restart deployment -n cloudsentinel
-
-        # kubectl patch deployment celery-worker-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        # kubectl patch deployment data-ingestion-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        # kubectl patch deployment data-processing-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        # kubectl patch deployment crca-anomaly-detection-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        # kubectl patch deployment crca-anomaly-detection-celery-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        # kubectl patch deployment cgnn-anomaly-detection-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        # kubectl patch deployment learning-adaptation-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        # kubectl patch deployment learning-adaptation-celery-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-        # kubectl patch deployment monitoring-project-deployment -n cloudsentinel -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"date\":\"`date +'%s'`\"}}}}}"
-
