--- a/k8s/learning_adaptation-celery-deployment.yml
+++ b/k8s/learning_adaptation-celery-deployment.yml
@@ -4,7 +4,7 @@ metadata:
   name: learning-adaptation-celery-deployment
   namespace: cloudsentinel
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: learning-adaptation-celery
@@ -17,7 +17,7 @@ spec:
       - name: learning-adaptation-celery
         image: jojojochem/learning_adaptation:latest
         imagePullPolicy: Always
-        command: ["celery", "-A", "app.celery", "worker", "--loglevel=info"]
+        command: ["celery", "-A", "app.celery", "worker", "--loglevel=info", "-P", "gevent"]
         env:
         - name: CELERY_BROKER_URL
           value: "redis://redis:6379/2"
