--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,13 @@ jobs:
         docker build -t ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -f data_ingestion/Dockerfile data_ingestion/
         docker build -t ${{ secrets.DOCKER_USERNAME }}/data_processing:latest -f data_processing/Dockerfile data_processing/
         docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
-        # docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
         docker build -t ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
         docker build -t ${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest -f user_interface/monitoring_project/Dockerfile user_interface/monitoring_project/
         docker push ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/data_processing:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest
-        # docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest
 
@@ -95,24 +95,24 @@ jobs:
       run: |
         kubectl apply -f k8s/namespace-deployment.yml
         kubectl apply -f k8s/redis-deployment.yml
-        kubectl apply -f k8s/data_ingestion_celery-deployment.yml
         kubectl apply -f k8s/data_ingestion-deployment.yml
+        kubectl apply -f k8s/data_ingestion_celery-deployment.yml
         kubectl apply -f k8s/data_processing-deployment.yml
         kubectl apply -f k8s/cgnn_anomaly_detection-deployment.yml
         kubectl apply -f k8s/crca_anomaly_detection-deployment.yml
+        kubectl apply -f k8s/crca_anomaly_detection-celery-deployment.yml
         kubectl apply -f k8s/learning_adaptation-deployment.yml
         kubectl apply -f k8s/learning_adaptation-celery-deployment.yml
-        kubectl apply -f k8s/crca_anomaly_detection-celery-deployment.yml
         kubectl apply -f k8s/monitoring_project-deployment.yml
 
-        kubectl set image deployment/celery-worker-deployment  celery-worker=${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -n cloudsentinel
         kubectl set image deployment/data-ingestion-deployment data-ingestion=${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -n cloudsentinel
+        kubectl set image deployment/celery-worker-deployment  celery-worker=${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest -n cloudsentinel
         kubectl set image deployment/data-processing-deployment data-processing=${{ secrets.DOCKER_USERNAME }}/data_processing:latest -n cloudsentinel
         kubectl set image deployment/cgnn-anomaly-detection-deployment cgnn-anomaly-detection=${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest -n cloudsentinel
         kubectl set image deployment/crca-anomaly-detection-deployment crca-anomaly-detection=${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -n cloudsentinel
         kubectl set image deployment/crca-anomaly-detection-celery-deployment crca-anomaly-detection-celery=${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest -n cloudsentinel
-        kubectl set image deployment/learning-adaptation-celery-deployment learning-adaptation-celery=${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -n cloudsentinel
         kubectl set image deployment/learning-adaptation-deployment learning-adaptation=${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -n cloudsentinel
+        kubectl set image deployment/learning-adaptation-celery-deployment learning-adaptation-celery=${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest -n cloudsentinel
         kubectl set image deployment/monitoring-project-deployment monitoring-project=${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest -n cloudsentinel
 
         kubectl rollout restart deployment -n cloudsentinel
